feat(deployment): Add router for docker-compose deployments

--- a/tracker/testing/index.html
+++ b/tracker/testing/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://components.konst.fish/main.css">
 
-    <script defer domain="localhost:5500" src="../angler.js"></script>
+    <script defer domain="localhost:5500" target="http://localhost:3000/api/ingress/v1" src="../angler.js"></script>
     <script src="helpers.js"></script>
 </head>
 <body>
