--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://components.konst.fish/main.css">
 
-    <script defer domain="angler.konst.fish" target="https://angler.konst.fish/ingress/v1" src="angler.js"></script>
+    <script defer domain="angler.konst.fish" target="https://angler.konst.fish/api/ingress/v1" src="angler.js"></script>
     <script src="helpers.js"></script>
 
     <title>Angler</title>
